# go-lancedb

./: .gitattributes  .gitignore  DEPENDENCY_USAGE.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_STATUS.md  Makefile  QUICK_REFERENCE.md  README.md  STANDALONE.md  USAGE_AS_DEPENDENCY.md  arrow.go  concurrency_test.go  delete.go  delete_test.go  go.mod  go.sum  index_test.go  lancedb.go  lancedb_test.go  query.go
.devcontainer/: devcontainer.json
.docker/: Dev.dockerfile
.github/workflows/: release.yml  test.yml
cmd/lancedb-install/: main.go
examples/basic/: main.go
examples/starter_template/: starter_template.go
examples/vector_search_with_index/: vector_search_with_index.go
go-lancedb/: arrow_test.go  data_test.go  go.mod  lancedb.go  query_test.go
go-lancedb/examples/basic/: main.go
go-lancedb/examples/starter_template/: starter_template.go
go-lancedb/examples/vector_search_with_index/: vector_search_with_index.go
libs/: README.md
libs/darwin-arm64/: liblancedb_cgo.dylib
rag/: PRODUCTION_IMPROVEMENTS.md  README.md  backup.go  backup_test.go  cache.go  chunking.go  chunking_test.go  document.go  document_test.go  embeddings.go  hybrid.go  logging.go  logging_test.go  metadata.go  metrics.go  pool.go  pool_test.go  progress.go  progress_test.go  query.go  query_test.go  rerank.go  retry.go  store.go  store_test.go
rag/examples/basic/: README.md  go.mod  go.sum  main.go
rust-cgo/: Cargo.toml
rust-cgo/src/: arrow_ffi.rs  connection.rs  error.rs  lib.rs  query.rs  table.rs
scripts/: build-prebuilt-libs.sh
